# mocca

./: .coveragerc  .gitignore  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.txt  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.ipynb_checkpoints/: setup-checkpoint.py
dev_notebooks/: cph.ipynb  test.py
docs/: Makefile  conf.py  index.html  index.rst
docs/doctrees/: authors.doctree  changelog.doctree  contributing.doctree  index.doctree  license.doctree  readme.doctree
docs/doctrees/api/: mocca.campaign.doctree  mocca.chromatogram.doctree  mocca.components.doctree  mocca.dad_data.apis.doctree  mocca.dad_data.doctree  mocca.decomposition.doctree  mocca.doctree  mocca.peak.doctree  mocca.report.doctree  mocca.user_interaction.doctree  mocca.visualization.doctree  modules.doctree
docs/html/: .buildinfo  authors.html  changelog.html  contributing.html  genindex.html  license.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js
docs/html/_modules/: index.html
docs/html/_sources/: index.rst.txt
docs/html/_static/: documentation_options.js
docs/html/api/: mocca.campaign.html  mocca.chromatogram.html  mocca.components.html  mocca.dad_data.apis.html  mocca.dad_data.html  mocca.decomposition.html  mocca.html  mocca.peak.html  mocca.report.html  mocca.user_interaction.html  mocca.visualization.html  modules.html
notebooks/: Untitled.ipynb  cph.ipynb  custom_data.ipynb  cyanation.ipynb  esterification.ipynb  knoevenagel-Copy1.ipynb  knoevenagel.ipynb  mix_knoevenagel.ipynb  mocca_tutorial.ipynb  test.db  tutorial.ipynb
notebooks/custom_data/: ret_1.txt  ret_2.txt  spec_1.txt  spec_2.txt
notebooks/cyanation_data/: 09072021_cnsource_a_98.txt  09072021_cnsource_d_99.txt  09072021_educt_88.txt  09072021_educt_89.txt  09072021_gradient_97.txt  09072021_istd_96.txt  09072021_product_92.txt  09072021_product_93.txt  09072021_sample_10.txt  09072021_sample_11.txt  09072021_sample_12.txt  09072021_sample_13.txt  09072021_sample_14.txt  09072021_sample_15.txt  09072021_sample_16.txt  09072021_sample_17.txt  09072021_sample_18.txt  09072021_sample_19.txt  09072021_sample_20.txt  09072021_sample_21.txt  09072021_sample_22.txt  09072021_sample_23.txt  09072021_sample_24.txt  09072021_sample_25.txt  09072021_sample_26.txt  09072021_sample_27.txt  09072021_sample_28.txt  09072021_sample_29.txt  09072021_sample_30.txt  09072021_sample_31.txt  09072021_sample_32.txt  09072021_sample_33.txt  09072021_sample_34.txt  09072021_sample_35.txt  09072021_sample_36.txt  09072021_sample_37.txt  09072021_sample_38.txt  09072021_sample_39.txt  09072021_sample_4.txt  09072021_sample_40.txt  (+52 more)
notebooks/cyanation_reports/: cyanation_reports_information.docx
notebooks/knoevenagel_data/2022-01-26_19-43-27_gradient.D/: ALS1.Sampler.scml
notebooks/knoevenagel_data/2022-01-26_19-48-52_ba_1.D/: ACQRES.REG  SAMPLE.XML
notebooks/knoevenagel_data/2022-01-26_19-54-51_ba_0.75.D/: ACQRES.REG  ALS1.Sampler.scml  DAD1.UV  DAD1C.ch  REPORT03.CSV  Report00.CSV  Report01.xls  SAMPLE.XML.bak  acq.macaml  acq_MethHist.txt  acq_damethod.reg  da.macaml  lcdiag.reg
notebooks/knoevenagel_data/2022-01-26_20-00-51_ba_0.5.D/: REPORT01.CSV  REPORT02.CSV  Report00.CSV  SAMPLE.XML  SAMPLE.XML.bak  acq_MethHist.txt
notebooks/knoevenagel_data/2022-01-26_20-06-51_ba_0,25.D/: ACQRES.REG  ALS1.Sampler.scml  DAD1.UV  DAD1B.ch  DiagResults.REG  REPORT01.CSV  REPORT02.CSV  Report00.CSV  Report01.xls  SAMPLE.XML  acq.macaml  acq.txt  acq_MethHist.txt  da.macaml  sequence.acam_
notebooks/knoevenagel_data/2022-01-26_20-12-55_cl_1.D/: ALS1.Sampler.scml  DAD1A.ch  DAD1B.ch  DiagResults.REG  REPORT02.CSV  Report00.CSV  SAMPLE.XML  acq.macaml  acq_damethod.reg  lcdiag.reg  sequence.acam_
notebooks/knoevenagel_data/2022-01-26_20-18-55_cl_0.75.D/: DAD1.UV  DAD1C.ch  REPORT01.CSV  REPORT02.CSV  REPORT03.CSV  SAMPLE.XML  SAMPLE.XML.bak  acq_damethod.reg  (+2 more)
notebooks/knoevenagel_reports/: knoevenagel_reports_information.docx
src/mocca/: __init__.py  chemstation_api.py  component.py  component_database.py  functions_to_distribute.py  labsolutions_api.py  main_notes.py  peak.py  peak_compound_id.py  peak_db.py  peak_purity.py  quant_database.py  read_file_data.py  skeleton.py  utils.py  visualization.py
tests/: chromatogram_gen.py  component_db_tests.py  conftest.py  quantification_db_tests.py  sim_test_data.py  test_campaign_funcs_init.py  test_campaign_utils.py  test_chemstation_api.py  test_chromatogram_assign.py  test_chromatogram_correct.py  test_chromatogram_funcs.py  test_chromatogram_preprocessor.py  test_chromatogram_utils.py  test_components_utils.py  test_dad_data_models.py  test_dad_data_process_funcs.py  test_databases_utils.py  test_labsolutions_api.py  test_parafac.py  test_peak.py  test_peak_db.py  test_peak_models.py  test_peak_utils.py  test_preprocess_peak.py  test_process_peak.py  test_quali_component_db.py  test_skeleton.py  tst_component.py
(+1939 files in other folders)
